VMware markdownlint fixes

--- a/vmware/vmware-tanzu/03_Tanzu_Kubernetes_Clusters/06_Lab-7.md
+++ b/vmware/vmware-tanzu/03_Tanzu_Kubernetes_Clusters/06_Lab-7.md
@@ -2,12 +2,12 @@
 
 Tags: Done
 
-# Objectives
+## Objectives
 
 - Generate a kubeconfig file for the cluster
 - Create a RoleBinding to allow Developer access
 
-# Generate a KubeConfig File
+## Generate a KubeConfig File
 
 1. Using the terminal, navigate to the `Workspace` directory.
 
@@ -33,7 +33,7 @@ Tags: Done
 
     Because `--admin` was not used, this kubeconfig file will redirect the user to Pinniped and authentication will be performed using LDAP.
 
-# Create Role Binding to Grant Developer Access
+## Create Role Binding to Grant Developer Access
 
 1. Using the terminal, navigate to the `Workspace` directory.
 
