chore: add TOCs to VMWare notes

--- a/vmware/vmware-tanzu-kubernetes-grid/03_Tanzu_Kubernetes_Clusters/06_Lab-7.md
+++ b/vmware/vmware-tanzu-kubernetes-grid/03_Tanzu_Kubernetes_Clusters/06_Lab-7.md
@@ -1,6 +1,9 @@
 # 3.6 - Lab 7
 
-Tags: Done
+- [3.6 - Lab 7](#36---lab-7)
+  - [Objectives](#objectives)
+  - [Generate a KubeConfig File](#generate-a-kubeconfig-file)
+  - [Create Role Binding to Grant Developer Access](#create-role-binding-to-grant-developer-access)
 
 ## Objectives
 
